Release version 0.2.0
